@@ -88,14 +88,6 @@ public class CxxPreprocessAndCompileTest {
     }
   }
 
-  private static final Preprocessor DEFAULT_PREPROCESSOR =
-      new GccPreprocessor(new HashedFileTool(Paths.get("preprocessor")));
-  private static final Compiler DEFAULT_COMPILER =
-      new GccCompiler(new HashedFileTool(Paths.get("compiler")));
-  private static final Preprocessor PREPROCESSOR_WITH_COLOR_SUPPORT =
-      new PreprocessorWithColorSupport(new HashedFileTool(Paths.get("preprocessor")));
-  private static final Compiler COMPILER_WITH_COLOR_SUPPORT =
-      new CompilerWithColorSupport(new HashedFileTool(Paths.get("compiler")));
   private static final CxxToolFlags DEFAULT_TOOL_FLAGS =
       CxxToolFlags.explicitBuilder()
           .addPlatformFlags(StringArg.of("-fsanitize=address"))
@@ -119,6 +111,25 @@ public class CxxPreprocessAndCompileTest {
             }
           };
 
+  private ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
+
+  private Preprocessor DEFAULT_PREPROCESSOR =
+      new GccPreprocessor(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/preprocessor"))));
+  private Compiler DEFAULT_COMPILER =
+      new GccCompiler(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/compiler"))));
+  private Preprocessor PREPROCESSOR_WITH_COLOR_SUPPORT =
+      new PreprocessorWithColorSupport(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/preprocessor"))));
+  private Compiler COMPILER_WITH_COLOR_SUPPORT =
+      new CompilerWithColorSupport(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/compiler"))));
+
   @Test
   public void inputChangesCauseRuleKeyChangesForCompilation() throws Exception {
     SourcePathRuleFinder ruleFinder =
@@ -127,16 +138,15 @@ public class CxxPreprocessAndCompileTest {
                 TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
     SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     BuildRuleParams params = TestBuildRuleParams.create();
     FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
             ImmutableMap.<String, String>builder()
-                .put("preprocessor", Strings.repeat("a", 40))
-                .put("compiler", Strings.repeat("a", 40))
+                .put("/root/preprocessor", Strings.repeat("a", 40))
+                .put("/root/compiler", Strings.repeat("a", 40))
                 .put("test.o", Strings.repeat("b", 40))
                 .put("test.cpp", Strings.repeat("c", 40))
-                .put("different", Strings.repeat("d", 40))
+                .put("/root/different", Strings.repeat("d", 40))
                 .put("foo/test.h", Strings.repeat("e", 40))
                 .put("path/to/a/plugin.so", Strings.repeat("f", 40))
                 .put("path/to/a/different/plugin.so", Strings.repeat("a0", 40))
@@ -174,7 +184,10 @@ public class CxxPreprocessAndCompileTest {
                     new CompilerDelegate(
                         pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                        new GccCompiler(new HashedFileTool(Paths.get("different"))),
+                        new GccCompiler(
+                            new HashedFileTool(
+                                PathSourcePath.of(
+                                    projectFilesystem, Paths.get("/root/different")))),
                         DEFAULT_TOOL_FLAGS),
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
@@ -278,7 +291,7 @@ public class CxxPreprocessAndCompileTest {
                         DEFAULT_COMPILER,
                         DEFAULT_TOOL_FLAGS),
                     DEFAULT_OUTPUT,
-                    FakeSourcePath.of("different"),
+                    FakeSourcePath.of("/root/different"),
                     DEFAULT_INPUT_TYPE,
                     CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                     Optional.empty()));
@@ -294,16 +307,15 @@ public class CxxPreprocessAndCompileTest {
                 TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
     final SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     final BuildRuleParams params = TestBuildRuleParams.create();
     final FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
             ImmutableMap.<String, String>builder()
-                .put("preprocessor", Strings.repeat("a", 40))
-                .put("compiler", Strings.repeat("a", 40))
+                .put("/root/preprocessor", Strings.repeat("a", 40))
+                .put("/root/compiler", Strings.repeat("a", 40))
                 .put("test.o", Strings.repeat("b", 40))
                 .put("test.cpp", Strings.repeat("c", 40))
-                .put("different", Strings.repeat("d", 40))
+                .put("/root/different", Strings.repeat("d", 40))
                 .put("foo/test.h", Strings.repeat("e", 40))
                 .put("path/to/a/plugin.so", Strings.repeat("f", 40))
                 .put("path/to/a/different/plugin.so", Strings.repeat("a0", 40))
@@ -344,7 +356,8 @@ public class CxxPreprocessAndCompileTest {
 
     PreprocessorFlags defaultFlags = PreprocessorFlags.builder().build();
     PreprocessorFlags alteredFlags =
-        defaultFlags.withFrameworkPaths(FrameworkPath.ofSourcePath(FakeSourcePath.of("different")));
+        defaultFlags.withFrameworkPaths(
+            FrameworkPath.ofSourcePath(FakeSourcePath.of("/root/different")));
     assertNotEquals(testData.generate(defaultFlags), testData.generate(alteredFlags));
   }
 
@@ -357,7 +370,6 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     BuildRuleParams params = TestBuildRuleParams.create();
     CxxToolFlags flags =
         CxxToolFlags.explicitBuilder()
@@ -386,7 +398,7 @@ public class CxxPreprocessAndCompileTest {
 
     ImmutableList<String> expectedCompileCommand =
         ImmutableList.<String>builder()
-            .add("compiler")
+            .add("/root/compiler")
             .add("-x", "c++")
             .add("-ffunction-sections")
             .add("-O3")
@@ -402,12 +414,11 @@ public class CxxPreprocessAndCompileTest {
   @Test
   public void compilerAndPreprocessorAreAlwaysReturnedFromGetInputsAfterBuildingLocally()
       throws Exception {
-    ProjectFilesystem filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem();
-    CellPathResolver cellPathResolver = TestCellPathResolver.get(filesystem);
-    SourcePath preprocessor = FakeSourcePath.of(filesystem, "preprocessor");
+    CellPathResolver cellPathResolver = TestCellPathResolver.get(projectFilesystem);
+    SourcePath preprocessor = FakeSourcePath.of(projectFilesystem, "preprocessor");
     Tool preprocessorTool = new CommandTool.Builder().addInput(preprocessor).build();
 
-    SourcePath compiler = FakeSourcePath.of(filesystem, "compiler");
+    SourcePath compiler = FakeSourcePath.of(projectFilesystem, "compiler");
     Tool compilerTool = new CommandTool.Builder().addInput(compiler).build();
 
     SourcePathResolver pathResolver =
@@ -419,15 +430,15 @@ public class CxxPreprocessAndCompileTest {
     BuildRuleParams params = TestBuildRuleParams.create();
     BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
 
-    filesystem.writeContentsToPath(
+    projectFilesystem.writeContentsToPath(
         "test.o: " + pathResolver.getRelativePath(DEFAULT_INPUT) + " ",
-        filesystem.getPath("test.o.dep"));
-    PathSourcePath fakeInput = FakeSourcePath.of(filesystem, "test.cpp");
+        projectFilesystem.getPath("test.o.dep"));
+    PathSourcePath fakeInput = FakeSourcePath.of(projectFilesystem, "test.cpp");
 
     CxxPreprocessAndCompile cxxPreprocess =
         CxxPreprocessAndCompile.preprocessAndCompile(
             target,
-            filesystem,
+            projectFilesystem,
             params,
             new PreprocessorDelegate(
                 pathResolver,
@@ -457,7 +468,7 @@ public class CxxPreprocessAndCompileTest {
     CxxPreprocessAndCompile cxxCompile =
         CxxPreprocessAndCompile.compile(
             target,
-            filesystem,
+            projectFilesystem,
             params,
             new CompilerDelegate(
                 pathResolver,
@@ -481,7 +492,6 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     BuildRuleParams params = TestBuildRuleParams.create();
     Path output = Paths.get("test.o");
     Path input = Paths.get("test.ii");
@@ -527,7 +537,6 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     BuildRuleParams params = TestBuildRuleParams.create();
     Path output = Paths.get("test.ii");
     Path input = Paths.get("test.cpp");
@@ -575,8 +584,8 @@ public class CxxPreprocessAndCompileTest {
 
   @Test
   public void testGetGcnoFile() throws Exception {
-    Path input = Paths.get("foo/bar.m.o");
+    Path input = projectFilesystem.resolve("foo/bar.m.o");
     Path output = CxxPreprocessAndCompile.getGcnoPath(input);
-    assertEquals(Paths.get("foo/bar.m.gcno"), output);
+    assertEquals(projectFilesystem.resolve("foo/bar.m.gcno"), output);
   }
 }
