@@ -84,7 +84,8 @@ public class PythonPackagedBinaryTest {
             PythonTestUtils.PYTHON_PLATFORM,
             PEX,
             ImmutableList.of(),
-            new HashedFileTool(Paths.get("dummy_path_to_pex_runner")),
+            new HashedFileTool(
+                PathSourcePath.of(projectFilesystem, Paths.get("dummy_path_to_pex_runner"))),
             ".pex",
             new PythonEnvironment(Paths.get("fake_python"), PythonVersion.of("CPython", "2.7")),
             "main",
